<resources>

    <string name="app_name">Cell Center</string>
	<string name="usernameText">用户名</string>
	<string name="loginText">登录</string>
	<string name="loginingText">登录中...</string>
	<string name="passwordText">密码</string>
	<string name="forgotPassword">忘记密码？</string>
	<string name="findPassword">找回密码</string>
	<string name="updatePassword">修改密码</string>
	<string name="updateMail">修改邮箱</string>
	<string name="oldPassword">旧密码：</string>
	<string name="newPassword">新密码：</string>
	<string name="againNewPassword">确认新密码：</string>
	<string name="oldMail">旧邮箱：</string>
	<string name="newMail">新邮箱：</string>
	<string name="string_submit">提交</string>
	<string name="exitAppHit">再按一次退出程序</string>
	<string name="reminderTitle">提醒</string>
	<string name="not_reminder">没有提醒</string>
	<string name="string_confirm">确定</string>
	<string name="string_quit_login">退出登录</string>
	<string name="auto_login">自动登录</string>
	<string name="quit_login">退出</string>
	<string name="findpassword_editview_hint">填写您绑定的邮箱地址:</string>
	<string name="string_back">返回</string>
	<string name="string_next">下一步</string>
	<string name="find_pwd_not_exist_text">您填写的地址不存在!</string>
	<string name="find_pwd_success_text">请访问邮箱，找回密码。</string>
	<string name="update_mail_success_text">修改邮箱成功</string>
	<string name="update_mail_fail_text">修改邮箱失败</string>
	<string name="update_pwd_success_text">修改密码成功</string>
	<string name="update_pwd_fail_text">修改密码失败</string>
	<string name="email_formaterror_text">邮箱格式错误</string>
	<string name="editview_null_hint">输入框内容不能为空</string>
	<string name="password_input_hint">两次输入的密码不一致，请重新输入！</string>
	<string name="string_pwd_manage">密码管理</string>
	<string name="string_update_email">更改邮箱</string>
	<string name="string_help_feedback">帮助与反馈</string>
	<string name="string_about_us">关于我们</string>
	<string name="string_version_update">版本更新</string>
	
	
	<!--SharedPreferences Key Name  -->
	<string name="userName">USERNAME</string>
	<string name="passWord">PASSWORD</string>
	<string name="userInfo">USERINFO</string>
	<string name="isSavePwd">ISSAVEPWD</string>
	<string name="isAutoLogin">ISAUTOLOGIN</string>
	<!--Map Key Name  -->
	<string name="UserID">UserID</string>
	<string name="ServiceType">serviceType</string>
	<string name="ServiceID">serviceID</string>
	<string name="ContractNo">contractNo</string>
	<string name="E_Mail">email</string>
	<string name="OldPassword">oldpassword</string>
	<string name="NewPassword">newpassword</string>
	<string name="OldMail">oldmail</string>
	<string name="NewMail">newmail</string>
	<string name="TextContent">textcontent</string>
	<string name="MacDes">MacDes</string>
	<string name="CurveSign">DevSign</string>
	<string name="ProcessType">processType</string>
	
	<string name="SampleStatusType">sampleStatusType</string>
	<string name="SampleStatusId">sampleStatusId</string>
	
	
	<string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="soft_update_confirm">确定</string>
    <string name="soft_update_new">最新版本：</string>
    <string name="soft_update_size">大小：</string>
    <string name="soft_update_text">升级内容：</string>
    
	<string name="download_check_report">下载检测报告</string>
	<string name="string_download">下载</string>
	<string name="string_downloading">正在下载...</string>
	<string name="string_not_check_report">没有检测报告</string>
	
	
</resources>
