<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout 
        android:id="@+id/RelativeLayoutUpdateMailActionbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_Title_Height"
        android:background="@color/theme_green">
        <ImageButton
            android:id="@+id/ImageButtonUpdateMailBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_button"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@color/transparent"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/updateMail"
            android:textColor="@color/white"
            android:textSize="19sp"/>
    </RelativeLayout>
    <LinearLayout 
        android:id="@+id/LinearLayoutUpdateMailFail"
        android:layout_below="@+id/RelativeLayoutUpdateMailActionbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/pwd_not_exist"
            android:layout_gravity="center_horizontal"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_mail_fail_text"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout 
        android:visibility="visible"
        android:id="@+id/LinearLayoutUpdateMailEditView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/LinearLayoutUpdateMailFail">
	    <TextView 
	        android:id="@+id/TextViewOldMailEditViewHint"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_marginLeft="30dp"
	        android:layout_marginTop="8dp"
	        android:text="@string/oldMail"
	        android:textColor="@color/theme_green"
	        android:textSize="13sp"/>
	    <TextView
		    android:id="@+id/TextViewUpdateMailOld"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/activity_findPwd_EditView_Height"
		    android:background="@drawable/edit_view_theme_gray"
		    android:padding="5dp"
		    android:layout_marginLeft="30dp"
		    android:layout_marginRight="30dp"
	        android:layout_marginTop="8dp"
		    android:textColor="@color/gray"
		    android:textSize="24sp" /> 
	    <TextView 
	        android:id="@+id/TextViewNewMailEditViewHint"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_marginLeft="30dp"
	        android:layout_marginTop="8dp"
	        android:text="@string/newMail"
	        android:textColor="@color/theme_green"
	        android:textSize="13sp"/>
	    <EditText
		    android:id="@+id/EditTextUpdateMailNew"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/activity_findPwd_EditView_Height"
		    android:background="@drawable/edit_view_theme_gray"
		    android:inputType="text"
		    android:padding="5dp"
		    android:layout_marginLeft="30dp"
		    android:layout_marginRight="30dp"
	        android:layout_marginTop="8dp"
		    android:textColor="@color/gray"
		    android:textSize="24sp" /> 
	    <Button 
	        android:id="@+id/ButtonUpdateMailSubmit"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_marginTop="20dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/green_button_onclick"
	        android:text="@string/string_submit"
	        android:textColor="@color/white"
	        android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout 
        android:visibility="gone"
        android:id="@+id/LinearLayoutUpdateMailViewSuccess"
        android:layout_below="@+id/RelativeLayoutUpdateMailActionbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/find_pwd_success"
            android:layout_gravity="center_horizontal"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_mail_success_text"
            android:textColor="@color/theme_green"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
       	<Button 
	        android:id="@+id/ButtonUpdateMailSuccessConfirm"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:layout_marginTop="20dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/button_theme_find_pwd_confirm"
	        android:text="@string/string_confirm"
	        android:textColor="@color/white"
	        android:textSize="13sp"/>
    </LinearLayout>
    
</RelativeLayout>